Adding content to my site

--- a/index.html
+++ b/index.html
@@ -60,11 +60,15 @@
 					A Software Engineer, focused on fullstack web development.
 				</h2>
 				<p class="about__desc">
-					Consectetur neque sed quam molestiae consectetur nesciunt sit alias
-					Vitae libero perferendis reprehenderit optio veritatis Accusantium at
-					voluptatum cumque temporibus et Explicabo iste porro quis numquam
-					distinctio Repellendus adipisci nam perferendis amet eaque hic
-					Voluptates
+					I am a software engineer in Sacramento, California. I work with
+					individuals and businesses to grow their online presence through
+					responsive websites. I am a detail-oriented and creative developer who
+					works with both front and backend technologies, and I look forward to
+					bringing your project to life. Let's make your site according to
+					industry standards, easily searchable via Google and accessible for
+					all prospective clients or customers. While I code by day, I can be
+					found gaming with my oldest son, reading comics and books by my
+					favorite authors or hunting for a scary new horror movie.
 				</p>
 
 				<div class="about__contact center">
