--- a/index.html
+++ b/index.html
@@ -102,16 +102,17 @@
 
 				<div class="projects__grid">
 					<div class="project">
-						<h3>Project 1</h3>
+						<h3>Storybook Blog Site</h3>
 						<p class="project__description">
-							Ipsum accusamus ea excepturi aliquid eligendi amet. Explicabo
-							sapiente debitis labore sed ipsam Mollitia repellat illum quod
-							unde beatae Quis
+							An example of using MVC with express, mongoDB, and google OAuth.
+							Lets the user log in with google authentication and create,
+							update, and delete posts. It also lets the user set the post to
+							private or public and view others' posts.
 						</p>
 						<ul class="project__stack">
-							<li class="project__stack-item">SASS</li>
-							<li class="project__stack-item">TypeScript</li>
-							<li class="project__stack-item">React</li>
+							<li class="project__stack-item">Express</li>
+							<li class="project__stack-item">mongoDB</li>
+							<li class="project__stack-item">Google Oauth</li>
 						</ul>
 
 						<a
@@ -131,11 +132,11 @@
 					</div>
 
 					<div class="project">
-						<h3>Project 2</h3>
+						<h3>Science Quote Generator</h3>
 						<p class="project__description">
-							Ipsum accusamus ea excepturi aliquid eligendi amet. Explicabo
-							sapiente debitis labore sed ipsam Mollitia repellat illum quod
-							unde beatae Quis
+							A quote generator that randomly selects a quote from scientists
+							that I find inspirational and a random background from nasa space
+							images of earth.
 						</p>
 						<ul class="project__stack">
 							<li class="project__stack-item">SASS</li>
